Style & image added

--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
 
 <head>
 
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+  <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css"/>
+  <link rel="stylesheet" media="screen" href="css/screen.css"/>
 
-	<title>Page Title</title>
+	<title>Meat Grinder Enthusiasts</title>
 
 	<!--Additional elements for browsers and robots go here goes here-->
 
 </head>
 
 <body>
-	<!--Elements visible to users go here-->
+  <form method="get" action="#null">
+    <div id="main"> 
+	  <h1> Welcome to the Meat Grinder Enthusiasts Main Page!</h1>
+	  <p> 
+	    This page is for anyone interested in grinding meats, veggies, sauces or whatever other interest you may have within the realm of using a meat grinder. It is an exclusive group and privilege to be apart of. We meet every other Thursday at Mr.Elbertsons abode in Vegas. To learn more fill out the form below!
+	  </p>
+	</div>
+	  <ol>
+	  
+    
 </body>
 
 </html>
