CSS basics completed
I am not sure why the sign up is slanted to the right

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <div id="main"> 
 	  <h1> Welcome to the Meat Grinder Enthusiasts Main Page!</h1>
 	  <p> 
-	    This page is for anyone interested in grinding meats, veggies, sauces or whatever other interest you may have within the realm of using a meat grinder. It is an exclusive group and privilege to be apart of. We meet every other Thursday at Mr.Elbertsons abode in Vegas. To learn more fill out the form below!
+	    This page is for anyone interested in grinding meats, veggies, sauces or whatever other interest you may have within the realm of using a meat grinder. It is an exclusive group and privilege to be apart of. We meet every other Thursday at Mr.Elbertsons abode in Vegas. To learn more fill out the form!
 	  </p>
 	  <img src="image/jerma.jpg" alt="Mr.Elbertson">
 	</div>
+	<div id="signup">
+	<h1> Sign Up Here!</h1>
 	<form method="get" action="#null" autocomplete="on">
 	  <ol>
 	    <li id="in-email">
@@ -43,6 +45,8 @@
 		<div class="submit">
           <input type="submit" name="submit" id="submit" value="Join Now!"/>
         </div>
+	</div>
+	</form>
 	  
     
 </body>
