Fixing errors with HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<form method="get" action="#null" autocomplete="on">
 	  <ol>
 	    <li id="in-email">
-		  <label for "email">Email</label>
+		  <label for="email">Email</label>
 		  <input type="email" name="email" id="email" autocomplete="on" placeholder="email@mail.domain" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"/>
 		</li>
 		<li id="fName">
@@ -45,6 +45,7 @@
 		<div class="submit">
           <input type="submit" name="submit" id="submit" value="Join Now!"/>
         </div>
+	  </ol>
 	</div>
 	</form>
 	  
