--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 		  <input type="checkbox" id="age-verification" name="age-verification" value="18" />
           <label for="age-verification">I am over 18 years old</label>
         </li>
+	  </ol>
 		<div class="submit">
           <input type="submit" name="submit" id="submit" value="Join Now!"/>
         </div>
 	</div>
-	</ol>
-	  
+    </form> 
     
 </body>
 
