--- a/index.html
+++ b/index.html
@@ -7,48 +7,41 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css"/>
   <link rel="stylesheet" media="screen" href="css/style.css"/>
-
-	<title>Meat Grinder Enthusiasts</title>
-
-	<!--Additional elements for browsers and robots go here goes here-->
-
+  <script defer src="js/site.js"></script>
+<title>Meat Grinder Enthusiasts</title>
 </head>
-
 <body>
     <div id="main"> 
-	  <h1> Welcome to the Meat Grinder Enthusiasts Main Page!</h1>
-	  <p> 
-	    This page is for anyone interested in grinding meats, veggies, sauces or whatever other interest you may have within the realm of using a meat grinder. It is an exclusive group and privilege to be apart of. We meet every other Thursday at Mr.Elbertsons abode in Vegas. To learn more fill out the form!
-	  </p>
-	  <img src="image/jerma.jpg" alt="Mr.Elbertson">
+	  <h1>Welcome to the Meat Grinder Enthusiasts Main Page!</h1>
+	    <p>This page is for anyone interested in grinding meats, veggies, sauces or whatever other interest you may have within the realm of using a meat grinder. It is an exclusive group and privilege to be apart of. We meet every other Thursday at Mr.Elbertsons abode in Vegas. To learn more fill out the form!</p>
+	    <img src="image/jerma.jpg" alt="Mr.Elbertson">
 	</div>
   <form method="get" action="#null" autocomplete="on">
 	<div id="signup">
-	<h1> Sign Up Here!</h1>
-	  <ol>
-	    <li id="in-email">
-		  <label for="email">Email</label>
-		  <input type="email" name="email" id="email" autocomplete="on" placeholder="email@mail.domain" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"/>
-		</li>
-		<li id="fName">
-		  <label for="name">Full Name:</label>
-		  <input type="text" name="name" id="name" autocomplete="on" placeholder="Your Name" maxlength="50" pattern="[A-Za-z]{1,32}+[.*\S+.*]{2,3}"/>
-		</li>
-		<li id="phoneNum">
-		  <label for="phone">Phone Number:</label>
-          <input type="tel" name="phone" id="phone" autocomplete="on" placeholder="000-000-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"/>
-		</li>
-		<li id="verAge">
-		  <input type="checkbox" id="age-verification" name="age-verification" value="18" />
-          <label for="age-verification">I am over 18 years old</label>
-        </li>
-	  </ol>
+	  <h1> Sign Up Here!</h1>
+	    <ol>
+	      <li id="in-email">
+		    <label for="email">Email</label>
+		    <input type="email" name="email" id="email" autocomplete="on" placeholder="email@mail.domain" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"/>
+		  </li>
+		  <li id="fName">
+		    <label for="name">Full Name:</label>
+		    <input type="text" name="name" id="name" autocomplete="on" placeholder="Your Name" maxlength="50" pattern="[A-Za-z]{1,32}+[.*\S+.*]{2,3}"/>
+		  </li>
+		  <li id="phoneNum">
+		    <label for="phone">Phone Number:</label>
+            <input type="tel" name="phone" id="phone" autocomplete="on" placeholder="000-000-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"/>
+		  </li>
+		  <li id="verAge">
+		    <input type="checkbox" id="age-verification" name="age-verification" value="18"/>
+            <label for="age-verification">I am over 18 years old</label>
+          </li>
+	    </ol>
 		<div class="submit">
           <input type="submit" name="submit" id="submit" value="Join Now!"/>
         </div>
 	</div>
   </form> 
-    
 </body>
 
 </html>
