--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css"/>
   <link rel="stylesheet" media="screen" href="css/style.css"/>
-  <script defer src="js/site.js"></script>
+  <script async src="js/site.js"></script>
 <title>Meat Grinder Enthusiasts</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
             </li>
 	      </ol>
 		  <div class="submit">
-            <input type="submit" name="submit" id="submit" value="Join Now!"/>
+            <input type="submit" name="submit" id="submit" value="Join Now!" onclick="alertFunction()" />
           </div>
 	  </div>
     </form>
